# spbm

./: .deepsource.toml  .dockerignore  .gitignore  .sonarcloud.properties  Dockerfile  README.md  TODO.txt  azure-pipelines.yml  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  requirements_ci.txt  setup.cfg  wercker.yml  wsgi.py
accounts/: admin.py  backend.py  models.py  urls.py
accounts/migrations/: 0001_initial.py
container/: entrypoint-dev.sh  entrypoint.sh  gunicorn.conf  gunicorn.conf.py  nginx.vhost.default  postgres.env  spbm.dev.env  spbm.env  start.sh  uwsgi.ini
events/: admin.py  forms.py  models.py  urls.py  views.py
events/migrations/: 0004_auto_20150602_1738.py
helpers/: auth.py
invoices/: f60.py  models.py  urls.py  views.py
locale/en_UK/LC_MESSAGES/: django.po
locale/nb_NO/LC_MESSAGES/: django.po
locale/templates/LC_MESSAGES/: django.pot
norlonn/: models.py  urls.py  views.py
norlonn/migrations/: 0001_initial.py  0002_auto_20150602_1738.py
scripts/: .gitignore  backup.sh  entrypoint.sh  run_production.sh  update.sh
society/: admin.py  models.py  urls.py  views.py
society/migrations/: 0002_society_logo.py
spbm/: settings.py  urls.py  wsgi.py
spbm/apps/accounts/: admin.py  backend.py  models.py  tests.py  urls.py
spbm/apps/norlonn/: models.py  tests.py  urls.py  views.py
spbm/apps/society/: __init__.py  apps.py  models.py  urls.py  urls_invoices.py
spbm/helpers/: auth.py  decorators.py  f60.py  mixins.py
spf_web/: settings.py  urls.py
spf_web/apps/accounts/: admin.py
spf_web/apps/events/: admin.py  forms.py  models.py  urls.py  views.py
spf_web/apps/invoices/: models.py  urls.py  views.py
static/css/: jquery-ui.min.css  jquery-ui.theme.min.css  spbm.css
static/js/: jquery-3.1.1.min.js  jquery-ui.min.js  modern.js
templates/: base-barebones.jinja  base-navigation.jinja  base.jinja  delete.jinja  form-loop-columns.jinja  form-loop.jinja  form.jinja  index.jinja  utils.jinja
templates/accounts/: base.jinja  login.jinja
templates/errors/: unauthorized.jinja
templates/events/: add.jinja  delete.jinja  edit.jinja  form.jinja  index.jinja  utils.jinja  view.jinja
templates/invoices/: all.jinja  index.jinja  list.jinja  view.jinja
templates/norlonn/: index.jinja  report.jinja
templates/society/: index.jinja
templates/workers/: add.jinja  associate.jinja  create.jinja  edit.jinja  index.jinja  view.jinja
workers/: admin.py  forms.py  models.py  urls.py  views.py
workers/migrations/: 0001_initial.py
(+94 files in other folders)
