[tool.poetry]
name = "spbm"
version = "0.1.0"
description = "The Student Personnel Booking Manager"
authors = ["Thor K. H. <thor@roht.no>"]

[tool.poetry.urls]
repository = "https://github.com/SPF-UiO/spbm"
"Bug Tracker" = "https://github.com/SPF-UiO/spbm/issues"

[tool.poetry.dependencies]
python = "^3.6"
Django = {version = "~2.2.8", python = "<3.9"}
django-debug-toolbar = "^2.2"
psycopg2 = {version = "~2.8.4", optional = true}
django-jinja = "~2.6"
jinja2 = "~2.11"
puente = "~0.5"
markupsafe = "^1.0"
pytz = "^2019.03"
django-localflavor = "~2.1"
django-widget-tweaks = "~1.4.2"
django-extra-views = "~0.10.0"
python-dateutil = "^2.7.3"
typing = "^3.6.6"
gunicorn = "^20.0.4"
meinheld = "^1.0.1"
uwsgi = {version = "^2.0.15", optional = true}
inotify = "^0.2.10"
mysqlclient = {version = "^1.4.6", optional = true}

[tool.poetry.extras]
uwsgi = ["uwsgi"]
psql = ["psycopg2"]
mariadb = ["mysqlclient"]

[tool.poetry.dev-dependencies]
taskipy = "^1.1.3"

[tool.taskipy.tasks]
dev = "SPBM_DEBUG=1 python -Wa ./manage.py runserver"
test = "python -Wa ./manage.py test"
coverage = "python -Wa -m coverage run --branch ./manage.py test"

[build-system]
requires = ["poetry>=1.0.3"]
build-backend = "poetry.masonry.api"
